[package]
authors = ["Sterling DeMille <sterlingdemille+github@gmail.com>", "Antony Blakey <antony@soops.nl>"]
description = "Get println! & panics to work in WebAssembly"
name = "wasm-glue"
version = "0.1.0-soops-1"

homepage = "https://github.com/AntonyBlakey/wasm-glue"
keywords = ["WebAssembly", "wasm"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/demille/wasm-glue"

[lib]
path = "src/lib.rs"
